--- a/public/bootstrap_layout_files/my_layout.css
+++ b/public/bootstrap_layout_files/my_layout.css
@@ -1,7 +1,7 @@
 body {
-	padding-top:50px;
+	/*padding-top:50px;*/
 	padding-bottom: 40px;
-	margin-left:200px;
+	/*margin-left:200px;*/
 	-webkit-transition: margin 500ms ease;
 	-moz-transition: margin 500ms ease;
 	-ms-transition: margin 500ms ease;
